--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -49,6 +49,9 @@ serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;logfile_maxbytes=1MB        ; max # logfile bytes b4 rotation (default 50MB)
 ;logfile_backups=10          ; # of logfile backups (default 10)
 
+[program:volume_permissions]
+command=/usr/local/bin/volume_permissions
+
 [program:mysqld]
 command=/usr/local/bin/mysqld_supervisor
 
