--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -51,12 +51,19 @@ serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:volume_permissions]
 command=/usr/local/bin/volume_permissions
+startsecs=0
+startretries=1
+exitcodes=0
 
 [program:owncloud_init]
 command=/usr/local/bin/owncloud_init
+startsecs=0
+startretries=1
+exitcodes=0
 
-[program:mysqld]
-command=/usr/local/bin/mysqld_supervisor
+[program:mariadb]
+command=/usr/bin/pidproxy /var/run/mariadb/mariadb.pid /usr/local/bin/mariadb_supervisor
+stopsignal=QUIT
 
 [program:httpd]
 command=/usr/sbin/httpd -DFOREGROUND
