More tweaking/fixing, mysql remaining

--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -13,14 +13,16 @@ LoadModule php5_module modules/libphp5.so
 LoadModule unixd_module modules/mod_unixd.so
 
 # begin mpm_prefork_module
-StartServers             3
-ServerLimit              3
+StartServers             2
+ServerLimit              5
 MinSpareServers          1
 MaxSpareServers          2
 
 Timeout                  60
 
-MaxRequestsPerChild      500
+MaxRequestsPerChild      200
+
+EnableSendfile           On
 # end mpm_prefork_module
 
 # begin log_config_module
