--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -49,12 +49,6 @@ serverurl=unix:///var/tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;logfile_maxbytes=1MB        ; max # logfile bytes b4 rotation (default 50MB)
 ;logfile_backups=10          ; # of logfile backups (default 10)
 
-[program:volume_permissions]
-command=/usr/local/bin/volume_permissions
-startsecs=0
-startretries=1
-exitcodes=0
-
 [program:owncloud_init]
 command=/usr/local/bin/owncloud_init
 startsecs=0
@@ -63,6 +57,12 @@ exitcodes=0
 
 [program:mariadb]
 command=/usr/bin/pidproxy /var/run/mariadb/mariadb.pid /usr/local/bin/mariadb_supervisor
+startsecs=3
+startretries=3
+autorestart=true
 
 [program:httpd]
 command=/usr/sbin/httpd -DFOREGROUND
+startsecs=3
+startretries=3
+autorestart=true
