Switched to PostgreSQL

--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -55,10 +55,11 @@ startsecs=0
 startretries=1
 exitcodes=0
 
-[program:mariadb]
-command=/usr/bin/pidproxy /var/run/mariadb/mariadb.pid /usr/local/bin/mariadb_supervisor
+[program:posgresql]
+command=/usr/bin/postgres -D /var/lib/pgsql/data
+user=postgres
 startsecs=3
-startretries=3
+startretries=20
 autorestart=true
 
 [program:httpd]
