httpd performance tweaks

--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -13,16 +13,19 @@ LoadModule php5_module modules/libphp5.so
 LoadModule unixd_module modules/mod_unixd.so
 
 # begin mpm_prefork_module
-StartServers             2
-ServerLimit              5
-MinSpareServers          1
-MaxSpareServers          2
+StartServers             3
+MaxRequestWorkers        7
+ServerLimit              7
+MinSpareServers          0
+MaxSpareServers          3
 
 Timeout                  60
 
-MaxRequestsPerChild      200
+MaxRequestsPerChild      100
 
 EnableSendfile           On
+KeepAlive                On
+KeepAliveTimeout         2s
 # end mpm_prefork_module
 
 # begin log_config_module
