Update for newest CentOS and ownCloud

--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -55,7 +55,7 @@ startsecs=0
 startretries=1
 exitcodes=0
 
-[program:posgresql]
+[program:postgresql]
 command=/usr/bin/postgres -D /var/lib/pgsql/data
 user=postgres
 startsecs=3
