--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -2,7 +2,9 @@ ServerRoot "/etc/httpd"
 
 LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 
+LoadModule access_compat_module modules/mod_access_compat.so
 LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule autoindex_module modules/mod_autoindex.so
 LoadModule dir_module modules/mod_dir.so
 LoadModule env_module modules/mod_env.so
 LoadModule log_config_module modules/mod_log_config.so
