--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -67,3 +67,10 @@ command=/usr/sbin/httpd -DFOREGROUND
 startsecs=3
 startretries=3
 autorestart=true
+
+[program:memcached]
+command=/usr/bin/memcached -m 32 -l localhost:11211
+user=memcached
+startsecs=3
+startretries=3
+autorestart=true
