--- a/usr/local/share/owncloud/config.php.template
+++ b/usr/local/share/owncloud/config.php.template
@@ -2,4 +2,8 @@
 $CONFIG = array (
   'installed' => false,
   'check_for_working_webdav' => false,
+  'memcache.local' => '\OC\Memcache\Memcached',
+  'memcached_servers' => array(
+     array('localhost', 11211),
+  ),
 );
